# git-msg-unfck

./: .gitignore  .unfckrc.example  ALT_NAMES.md  Dockerfile  HOW_TO_PUBLISH_TO_PYPI_ORG.MD  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  NEW_FEATURES.MD  PUBLISHING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test-current-repo.sh  unfck.py
.github/workflows/: ci.yml  publish.yml
src/: __init__.py  cli.py  config.py  git_utils.py  llm_providers.py  message_generator.py
tests/: __init__.py  integration_test.py  test_config.py
