[tool.poetry]
name = "git-msg-unfck"
version = "0.1.0"
description = "A CLI tool to improve Git commit messages using AI"
authors = ["git-msg-unfck Contributors <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"
repository = "https://github.com/yourusername/git-msg-unfck"
homepage = "https://github.com/yourusername/git-msg-unfck"
keywords = ["git", "commit", "message", "ai", "llm", "claude", "gpt", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.28.0"
gitpython = "^3.1.30"
colorama = "^0.4.6"
rich = "^13.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"

[tool.poetry.scripts]
unfck = "src.cli:main"
unfck-test = "tests.integration_test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
